--- a/package.json
+++ b/package.json
@@ -1,15 +1,19 @@
 {
-  "name": "chat-app",
+  "name": "zephon",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.21.0",
+    "firebase": "^8.0.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "sass": "^1.29.0",
+    "socket.io": "^3.0.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
@@ -35,5 +39,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {}
 }
