--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "firebase-admin": "^9.4.2",
     "mysql": "^2.18.1",
     "socket.io": "^3.0.3"
   },
