--- a/zephon/package.json
+++ b/zephon/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^12.1.10",
     "@virgilsecurity/e3kit-browser": "^2.4.1",
     "axios": "^0.21.0",
+    "file-loader": "^6.2.0",
     "firebase": "^8.0.2",
     "react": "^17.0.1",
     "react-app-rewired": "^2.1.8",
@@ -19,12 +20,13 @@
     "sass": "^1.29.0",
     "socket.io": "^3.0.1",
     "socket.io-client": "^3.0.3",
+    "wasm-loader": "^1.3.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
-    "test": "react-scripts test",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
