--- a/zephon/package.json
+++ b/zephon/package.json
@@ -51,7 +51,7 @@
     ]
   },
   "devDependencies": {
-    "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-plugin-import": "^2.22.1"
+    "eslint": "^7.25.0",
+    "eslint-plugin-react": "^7.23.2"
   }
 }
