--- a/zephon/package.json
+++ b/zephon/package.json
@@ -31,7 +31,7 @@
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
     "eject": "react-scripts eject",
-    "heroku-postbuild": "npm install && npm run build"
+    "heroku-postbuild": "npm install && npm run build && npm start"
   },
   "eslintConfig": {
     "extends": [
